AC_INIT
AC_CONFIG_SRCDIR([src/df_andi.c])

AC_PREREQ(2.61)

PACKAGE=DirectFB-Autotest
VERSION=1.0.0

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AC_SUBST(VERSION)

#
# Enable silent compilation showing just CC or CCLD rather than the full
# compile-time GCC output.
# 
AM_SILENT_RULES([yes])

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC


dnl Clear default CFLAGS
if test x"$CFLAGS" = x"-g -O2"; then
  CFLAGS=
fi
  
CFLAGS="-O3 -pipe $CFLAGS"

if test "x$GCC" = xyes; then
  CFLAGS="-Wall $CFLAGS"
fi

AC_CHECK_HEADERS(stdbool.h)

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  CFLAGS="$CFLAGS -g3"
fi)


#
# Check for DirectFB
#

DIRECTFB_REQUIRED_VERSION=1.4.16

PKG_CHECK_MODULES(DIRECTFB, directfb >= $DIRECTFB_REQUIRED_VERSION, [dfb_ok=yes ],
    [dfb_ok=no]
	AC_MSG_ERROR([$DIRECTFB_PKG_ERRORS
*** DirectFB $DIRECTFB_REQUIRED_VERSION or newer is required. The latest version
*** of DirectFB is available from http://www.directfb.org/.]))

DFB_AVAILABLE_VERSION=`$PKG_CONFIG --modversion directfb`

BINARY_VERSION=`echo $DFB_AVAILABLE_VERSION | sed 's/\./-/2'`

PKG_CHECK_MODULES(DFB_INTERNAL, directfb-internal >= $DIRECTFB_REQUIRED_VERSION, [dfb_internal_ok=yes],
    [dfb_internal_ok=no]
	AC_MSG_ERROR([$DIRECTFB_PKG_ERRORS
*** DirectFB $DIRECTFB_REQUIRED_VERSION or newer is required. The latest version
*** of DirectFB is available from http://www.directfb.org/.]))

CFLAGS="$CFLAGS -Werror-implicit-function-declaration"

DATAROOTDIR=$datarootdir/
DATADIR=$datadir/directfb-$DFB_AVAILABLE_VERSION
AC_SUBST(DATAROOTDIR)
AC_SUBST(DATADIR)

AC_CONFIG_FILES([
Makefile
src/Makefile
])
AC_OUTPUT
